--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,13 +2,13 @@
 
 <% salt = BCrypt::Engine.generate_salt %>
    
-one:
+admin:
   email: admin@admin.fi
   password_salt: <%= salt %>
   password_hash: <%= BCrypt::Engine.hash_secret("admin", salt) %>
   is_admin: 1
 
-two:
+user:
   email: user@user.fi
   password_salt: <%= salt %>
   password_hash: <%= BCrypt::Engine.hash_secret("user", salt) %>
